# llmdev

./: .gitignore  CONTRIBUTING.md  DESIGN_OPTIONS.md  IMPLEMENTATION.md  MVP.md  MVP2.md  QUICKSTART.md  README.md  SOLUTION_SUMMARY.md  SUMMARY.md  VISION.md  pyproject.toml
.github/: copilot-instructions.md
case_studies/: GITHUB_ANICOLAO_DIKU.md  GITHUB_ANICOLAO_DIKUCLIENT.md  GITHUB_ANICOLAO_DIKUMUD.md  GITHUB_ANICOLAO_MORPHEUM.md  README.md
case_studies/GITHUB_ANICOLAO_MORPHEUM.md/: ANALYZE_ANICOLAO_MORPHEUM.md
docs/: CNAME  DEPLOYMENT.md  README.md  _config.yml  about.md  getting-started.md  index.md  leveling-up.md  sharpen-the-saw.md  staying-organized.md
docs/_site/: about.html  feed.xml  getting-started.html  index.html  leveling-up.html  sharpen-the-saw.html  staying-organized.html
docs/_site/assets/css/: style.css  style.css.map
docs/assets/: main.scss
docs/assets/css/: style.scss
src/llmdev/: __init__.py  analyzer.py  cli.py  config.py  detector.py  github_client.py  mcp_instructions.py  reporter.py
src/llmdev/analyzers/: __init__.py  iteration_analyzer.py  pr_analyzer.py  prompt_analyzer.py
src/llmdev/cache/: __init__.py  disk_cache.py  rate_limiter.py
tests/: __init__.py  test_analyzers.py  test_cache.py  test_deep_analysis.py  test_detector.py  test_integration.py  test_mcp_instructions.py
